--- a/KosaESS/src/main/resources/templates/student/notice_list.html
+++ b/KosaESS/src/main/resources/templates/student/notice_list.html
@@ -22,8 +22,8 @@
 						<th>등록일자</th>
 						<th>조회수</th>
 					</tr>
-					<tr th:each="postVO : ${postList}">
-						<td></td>
+					<tr th:each="postVO , rowStat: ${postList}">
+						<td><span th:text="${rowStat.index + 1}"></span></td>
 						<td><a th:text="${postVO.postTitle}"
 							th:href="@{/student/notice/__${postVO.postId}__}">공지사항 제목</a></td>
 						<td th:text="${postVO.rgstDd}">등록일자</td>
