--- a/KosaESS/src/main/resources/templates/student/class_detail.html
+++ b/KosaESS/src/main/resources/templates/student/class_detail.html
@@ -11,66 +11,81 @@
 <body>
 	<div th:replace="~{/include/student_header :: header}"
 		style="width: 100%;"></div>
-	<div class="container">
-		<div class="maintext">
-			<h1 style="color: #0E5881; margin-top: 3%;">교육 과정 지원 상세</h1>
-		</div>
-		<div class="content">
-			<table>
-				<tr>
-					<th>이름</th>
-					<td colspan="5" th:text="${classDetail.clssNm}"></td>
-				</tr>
-				<tr>
-					<th>지원 기간</th>
-					<td style="width: 40%"
-						th:text="${classDetail.aplyStartDd} + ' ~ ' + ${classDetail.aplyEndDd}"></td>
+	<div class="container" style="display: flex;">
+		<div style="width: 80%">
+			<div class="maintext">
+				<h1 style="color: #0E5881; margin-top: 3%;">교육 과정 지원 상세</h1>
+			</div>
+			<div class="content">
+				<table>
+					<tr>
+						<th>이름</th>
+						<td colspan="5" th:text="${classDetail.clssNm}"></td>
+					</tr>
+					<tr>
+						<th>지원 기간</th>
+						<td style="width: 40%"
+							th:text="${classDetail.aplyStartDd} + ' ~ ' + ${classDetail.aplyEndDd}"></td>
 
-					<th>교육 기간</th>
-					<td colspan="3"
-						th:text="${classDetail.clssStartDd}+ ' ~ ' + ${classDetail.clssEndDd}"></td>
-				</tr>
-				<tr>
-					<th>교육 장소</th>
-					<td th:text="${classDetail.clssAdr}"></td>
-					<th>회사</th>
-					<td style="width: 15%" 
-					th:text="${classDetail.cmpyNm}"></td>
-					<th>교육 상태</th>
-					<td th:text="${classDetail.clssCd}"></td>
-				</tr>
-				<tr>
-					<th>시작 시간</th>
-					<td th:text="${classDetail.setInTm} + '시'"></td>
-					<th>종료 시간</th>
-					<td th:text="${classDetail.setOutTm}+ '시'"></td>
-					<th>수강 정원</th>
-					<td th:text="${classDetail.limitCnt}+ '명'"></td>
-				</tr>
-			</table>
+						<th>교육 기간</th>
+						<td colspan="3"
+							th:text="${classDetail.clssStartDd}+ ' ~ ' + ${classDetail.clssEndDd}"></td>
+					</tr>
+					<tr>
+						<th>교육 장소</th>
+						<td th:text="${classDetail.clssAdr}"></td>
+						<th>회사</th>
+						<td style="width: 15%" th:text="${classDetail.cmpyNm}"></td>
+						<th>교육 상태</th>
+						<td th:text="${classDetail.clssCd}"></td>
+					</tr>
+					<tr>
+						<th>시작 시간</th>
+						<td th:text="${classDetail.setInTm} + '시'"></td>
+						<th>종료 시간</th>
+						<td th:text="${classDetail.setOutTm}+ '시'"></td>
+						<th>수강 정원</th>
+						<td th:text="${classDetail.limitCnt}+ '명'"></td>
+					</tr>
+				</table>
+				<div>
+					<ul th:each="ClassDetailDTO : ${classDetailList}">
+						<li>
+							<div class="icon"
+								th:if="${ClassDetailDTO.fileType == 'application' or ClassDetailDTO.fileType == 'text'}">
+								<a
+									th:href="@{/student/download/file/__${ClassDetailDTO.fileId}__/__${ClassDetailDTO.fileSubId}__}"
+									th:title="${ClassDetailDTO.fileNm}"> <img
+									style="width: 40px;" th:src="@{/img/file_icon.png}"
+									alt="file  아이콘"> <span th:text="${ClassDetailDTO.fileNm}"></span>
+								</a>
+							</div>
+							<div th:if="${ClassDetailDTO.fileType=='image'}">
+								<img style="width: 500px;"
+									th:src="@{/img/__${ClassDetailDTO.fileNm}__}">
+							</div>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+		<div
+			style="width: 20%; position: fixed; display: block; right: 8%; top: 25%; margin: 30px 0;">
 			<div>
-				<ul th:each="ClassDetailDTO : ${classDetailList}">
-					<li>
-						<div class="icon"
-							th:if="${ClassDetailDTO.fileType == 'application' or ClassDetailDTO.fileType == 'text'}">
-							<a
-								th:href="@{/student/download/file/__${ClassDetailDTO.fileId}__/__${ClassDetailDTO.fileSubId}__}"
-								th:title="${ClassDetailDTO.fileNm}"> <img
-								style="width: 40px;" th:src="@{/img/file_icon.png}"
-								alt="file  아이콘"> <span th:text="${ClassDetailDTO.fileNm}"></span>
-							</a>
-						</div>
-						<div th:if="${ClassDetailDTO.fileType=='image'}">
-							<img style="width: 500px;"
-								th:src="@{/img/__${ClassDetailDTO.fileNm}__}">
-						</div>
-					</li>
+				<h2>최근에 조회한 교육</h2>
+				<ul>
+					<li></li>
+					<li></li>
 				</ul>
 			</div>
-			<div class="btn">
-				<button class="back">목록으로</button>
-				<button class="openModalBtn">지원하기</button>
-			</div>
+		</div>
+	</div>
+	<div
+		style="position: fixed; display: block; right: 20px; bottom: 20px;">
+		<div class="btn">
+			<button class="back">목록으로</button>
+			<button class="openModalBtn">지원하기</button>
+			<button class="moveTopBtn"></button>
 		</div>
 	</div>
 	<div class="modal">
@@ -112,6 +127,20 @@
         closeModalBtn.addEventListener('click', () => {
             modal.style.display = 'none';
         });
+        
+        const backBtn = document.querySelector('.back');
+
+        backBtn.addEventListener('click', () => {
+        	location.replace('/student/class');
+        });
+        
+        const topBtn = document.querySelector(".moveTopBtn");
+
+     	// 버튼 클릭 시 맨 위로 이동
+     	topBtn.addEventListener('click', () =>{
+       		window.scrollTo({ top: 0, behavior: "smooth" });  
+     });	
+        
     </script>
 </body>
 </html>
