--- a/KosaESS/src/main/resources/templates/manager/student_list.html
+++ b/KosaESS/src/main/resources/templates/manager/student_list.html
@@ -28,66 +28,62 @@
 				</div>
 				<!-- 아이콘 삽임 부분 -->
 			</div>
-기간 선택 추가하기
 			<!-- 검색 필터 테이블 -->
 			<div class="search_filter_table_wrap">
 				<table class="search_filter_table" style="width: 100%;">
 					<tr>
 						<td style="width: 10%;">교육과정명</td>
-<!-- 						<td style="width: 30%;"><input style="width: 100%;" type="text"></td> -->
-						<td style="width: 30%;">
-							<select >
-								<option th:each="className:${classNameList}" th:text="${className.clssNm}" th:value="${className.clssId}"></option>
-							</select>
-						</td>
+						<td style="width: 30%;"><select><option th:each="className:${classNameList}" th:text="${className.clssNm}" th:value="${className.clssId}"></option></select></td>
 						<td style="width: 10%;">상태</td>
-						<td style="width: 50%;"><span
-							th:each="classCodeName:${classCodeNameList}"> <input
-								type="checkbox" checked="checked"> <label
-								th:text="${classCodeName}"></label>
-						</span></td>
-
+						<td style="width: 50%;"><span th:each="classCodeName:${classCodeNameList}"> <input type="checkbox" checked="checked" value="${classCodeName.cmcdId}"> <label th:text="${classCodeName.cmcdNm}"></label></span></td>
 					</tr>
-					<tr th:if="${session.role == 'admin'}">
-						<td style="width: 10%;">지원기간</td>
-						<td style="width: 30%;"><input type="date"> <span>
-								~ </span> <input type="date"></td>
-						<td style="width: 10%;">교육기간</td>
-						<td style="width: 50%;"><input type="date"> <span>
-								~ </span> <input type="date"></td>
+					<tr>
+						<td style="width: 10%;">학생 상태</td>
+						<td style="width: 50%;"><span th:each="stdtCodeName:${stdtCodeNameList}"> <input type="checkbox" checked="checked" value="${stdtCodeName.cmcdNm}"> <label th:text="${stdtCodeName.cmcdNm}"></label></span></td>
 					</tr>
+<!-- 					<tr> -->
+<!-- 						<td style="width: 10%;">교육기간</td> -->
+<!-- 						<td style="width: 50%;"><input type="date"><span>~</span><input type="date"></td> -->
+<!-- 					</tr> -->
 				</table>
 				<!-- 검색 버튼 -->
 				<div class="search_filter_btn_wrap">
 					<button class="search_filter_btn">검색</button>
 				</div>
 				<!-- End 검색 버튼 -->
-				<span th:text = "|${stdtCnt} 명|"></span><span>엄</span><span>준</span>
+				<span th:text="|${stdtCnt} 명|"></span> <span th:each="cmptCodeName:${cmptCodeNameList}"><button th:value="${cmptCodeName.cmcdId}" th:text="${cmptCodeName.cmcdNm}"></button></span>
 				<table>
-				<tr>
-					<th><input type="checkbox"></th>
-					<th>번호</th>
-					<th>이름</th>
-					<th>성별</th>
-					<th>생년월일</th>
-					<th>이메일</th>
-					<th>연락처</th>
-					<th>이수여부</th><!--교육생 상태로 고치는게 어떤지? -->
-				</tr>
-				<tr th:each="stdt:${stdtList}">
-					<td><input type="checkbox"></td>
-					<td th:text="${stdtStat.count}"></td>
-					<td><a th:text="${stdt.stdtNm}" th:href="@{manager/student/{studentId}}"></a></td>
-					<td th:text="${stdt.genderCd}">성별</td>
-					<td th:text="${stdt.birthDd}">생년월일</td>
-					<td th:text="${stdt.userEmail}">이메일</td>
-					<td th:text="${stdt.stdtTel}">연락처</td>
-					<td th:text="${stdt.jobCd}">이수여부</td>
-				</tr>
+					<tr>
+						<th><input type="checkbox"></th>
+						<th>번호</th>
+						<th>이름</th>
+						<th>지각</th>
+						<th>조퇴</th>
+						<th>결석</th>
+						<th>성별</th>
+						<th>생년월일</th>
+						<th>이메일</th>
+						<th>연락처</th>
+						<th>이수여부</th>
+					</tr>
+					<tr th:each="stdt:${stdtList}">
+						<td><input type="checkbox"></td>
+						<td th:text="${stdtStat.count}"></td>
+						<td th:text="${stdt.stdtNm}"></td>
+						<td th:text="${stdt.countLateArrive}"></td>
+						<td th:text="${stdt.countLateArrive}"></td>
+						<td th:text="${stdt.countLateArrive}"></td>
+						<td th:text="${stdt.genderCd}">성별</td>
+						<td th:text="${stdt.birthDd}">생년월일</td>
+						<td th:text="${stdt.userEmail}">이메일</td>
+						<td th:text="${stdt.stdtTel}">연락처</td>
+						<td th:text="${stdt.jobCd}">이수여부</td>
+					</tr>
 				</table>
 			</div>
 			<!-- End 검색 필터 부분 -->
 		</div>
 	</div>
+	
 </body>
 </html>
