--- a/KosaESS/src/main/resources/static/css/student/main.css
+++ b/KosaESS/src/main/resources/static/css/student/main.css
@@ -1,16 +1,68 @@
 .maintext {
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
-	flex-shrink: 0;
-	color: #0E5881;
-	font-size: 18px;
+	color: white;
+	font-size: 15px;
 	margin: 30px 0;
+	/* padding: 10% 0 4% 0; */
+	align-items: flex-start;
 }
 
-.maintext h3 {
-	color: #6E9BB3;
-	font-size: 18px;
+.banner {
+	margin-top: 100px;
+	width: 100%;
+	height: 600px;
+	overflow-x: hidden;
+}
+
+.img-list {
+	display: flex;
+	transition: .3s ease-out;
+	height: 100%;
+}
+
+.button-list button {
+	border-style: none;
+	padding: 4px;
+	width: 3%;
+	margin-bottom: 1%;
+	border-radius: 10px;
+	background: white;
+}
+
+.bannertext {
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	justify-content: center;
+	color: white;
+	padding: 0 8%;
+	text-shadow: 0 0 7px #000;
+}
+
+.imgs {
+	width: 100%;
+	height: 100%;
+}
+
+.img2 {
+	background-image: url( "/img/coding.jpg" );
+	content: "";
+	z-index: -1;
+}
+
+.img1 {
+	background-image: url( "/img/banner2.jpg" );
+	content: "";
+	z-index: -1;
+}
+
+.maintext h2 {
+	color: #CFDEE6;
+	font-size: 30px;
+	margin: 0;
+	padding-top: 2%;
 }
 
 body {
@@ -25,6 +77,7 @@ body {
 .maincontent {
 	display: flex;
 	justify-content: space-between;
+	flex-wrap: wrap;
 }
 
 .content {
@@ -34,12 +87,7 @@ body {
 
 .con {
 	background: #E7EFF3;
-	padding: 4%;
-}
-
-.con2 {
-	background: #E7EFF3;
-	padding: 5%;
+	padding: 2%;
 }
 
 h2 {
@@ -114,7 +162,6 @@ input::placeholder {
 	cursor: pointer;
 	text-align: center;
 	height: 100%;
-	
 }
 
 .submit {
@@ -144,8 +191,7 @@ input::placeholder {
 .box span {
 	font-size: 17px;
 	text-decoration: none;
-		color: black;
-	
+	color: black;
 }
 
 .plus {
@@ -175,6 +221,7 @@ input::placeholder {
 .login span {
 	font-weight: bold;
 }
-.checktm{
+
+.checktm {
 	text-align: center;
 }
